fixes slider being overlapped by navbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Kumbh+Sans:wght@400;700&family=Noto+Sans&family=Overpass:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Kumbh+Sans:wght@400;700&family=Noto+Sans&family=Overpass:wght@400;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;700&display=swap");
 
 * {
   margin: 0;
@@ -6,13 +6,13 @@
   box-sizing: border-box;
 }
 body {
-  font-family: 'Poppins', sans-serif;
-  font-family: 'Poppins', sans-serif;
-  display: flex;
-  flex-direction: column;
+  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
+  /* display: flex; */
+  /* flex-direction: column; */
   max-height: 100vh;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
   background-color: rgb(15, 15, 15);
   background-color: rgb(15, 15, 15);
 }
@@ -216,7 +216,7 @@ body {
   cursor: pointer;
 }
 
- /* Search Bar CSS */ 
+/* Search Bar CSS */
 .searching {
   display: flex;
   justify-content: center;
@@ -246,7 +246,7 @@ body {
   align-items: center;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-} 
+}
 
 /* slider  */
 slider {
@@ -254,6 +254,7 @@ slider {
   margin-top: 15rem;
 }
 .slider {
+  margin-top: 100px;
   position: relative;
   width: 100%;
   overflow: hidden;
@@ -326,7 +327,7 @@ slider {
 
 /* Landing Page CSS */
 .wrapper {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   width: 100%;
   min-height: fit-content; /* 
   border: 2px solid white ; */
@@ -360,7 +361,7 @@ slider {
   background-size: cover;
 }
 h1 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #ffc700;
   margin-bottom: 10px;
 }
@@ -386,7 +387,7 @@ h1 {
   border-radius: 20px;
 }
 .btn-start::before {
-  content: '';
+  content: "";
   position: absolute;
   background-color: #fff;
 
